fixed footer icon spacing

--- a/themes/inhabitent-theme/sass/_footer.scss
+++ b/themes/inhabitent-theme/sass/_footer.scss
@@ -16,7 +16,7 @@
     margin: 0 auto;
     display: flex;
     h3 {
-        font-size: 1.4rem;
+        font-size: 1.2rem;
         letter-spacing: 2px;
         line-height: 1.25;
     }
@@ -31,6 +31,9 @@
     }
     a:hover {
         text-decoration: underline;
+    }
+    .fa-twitter-square {
+        padding: 0 10px;
     }
 }
 
