--- a/themes/inhabitent-theme/style.css
+++ b/themes/inhabitent-theme/style.css
@@ -1500,7 +1500,7 @@ object {
   display: -ms-flexbox;
   display: flex; }
   .footer-content h3 {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     letter-spacing: 2px;
     line-height: 1.25; }
 
@@ -1513,6 +1513,8 @@ object {
     font-family: 'merriweather'; }
   .contact a:hover {
     text-decoration: underline; }
+  .contact .fa-twitter-square {
+    padding: 0 10px; }
 
 .business-hours {
   -ms-flex-preferred-size: 25%;
